<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".view.EventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:elevation="0dp">

            <include
                layout="@layout/include_toolbar"
                app:layout_scrollFlags="scroll" />

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="16dp">

                <ImageView
                    android:id="@+id/banner"
                    android:layout_width="0dp"
                    android:layout_height="96dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintBottom_toBottomOf="@id/event_name"
                    app:layout_constraintEnd_toStartOf="@+id/guide_center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/event_name" />

                <TextView
                    android:id="@+id/event_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="20dp"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                    android:textColor="@color/analog_purple"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/checkin_button"
                    app:layout_constraintLeft_toLeftOf="@id/guide_center"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="[Event title more words]" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/checkin_button"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/check_in"
                    app:layout_constraintBottom_toTopOf="@id/date_container"
                    app:layout_constraintTop_toBottomOf="@id/event_name" />


                <LinearLayout
                    android:id="@+id/date_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="6dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toTopOf="@id/description_label"
                    app:layout_constraintLeft_toRightOf="@id/price_container"
                    app:layout_constraintRight_toLeftOf="@id/location_container"
                    app:layout_constraintTop_toBottomOf="@id/checkin_button">

                    <ImageView
                        android:id="@+id/date_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_event_black_24dp"
                        android:tint="@color/analog_purple" />

                    <TextView
                        android:id="@+id/event_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="11sp"
                        tools:text="09/09/2010" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/price_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/date_container"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/date_container"
                    app:layout_constraintTop_toTopOf="@id/date_container">

                    <ImageView
                        android:id="@+id/price_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_cash_black_24dp"
                        android:tint="@color/analog_purple" />

                    <TextView
                        android:id="@+id/event_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="11sp"
                        tools:text="[Price]" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/location_container"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginRight="12dp"
                    android:orientation="horizontal"
                    app:layout_constraintBottom_toBottomOf="@id/date_container"
                    app:layout_constraintLeft_toRightOf="@id/date_container"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/date_container">

                    <ImageView
                        android:id="@+id/location_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/ic_my_location_black_24dp"
                        android:tint="@color/analog_purple" />

                    <TextView
                        android:id="@+id/event_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:layout_marginLeft="10dp"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                        android:textSize="11sp"
                        tools:text="[Location]" />

                </LinearLayout>


                <TextView
                    android:id="@+id/description_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/label_description"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/text_green"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/event_description"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/date_container" />

                <TextView
                    android:id="@+id/event_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toTopOf="@id/cupons_label"
                    app:layout_constraintTop_toBottomOf="@id/description_label"
                    tools:text="O Patas Dadas estará na Redenção, nesse domingo, com cães para adoção e produtos à venda!\n\nNa ocasião, teremos bottons, bloquinhos e camisetas!\n\nTraga seu Pet, os amigos e o chima, e venha aproveitar esse dia de sol com a gente e com alguns de nossos peludinhos - que estarão prontinhos para ganhar o ♥ de um humano bem legal pra chamar de seu. \n\nAceitaremos todos os tipos de doação:\n- guias e coleiras em bom estado\n- ração (as que mais precisamos no momento são sênior e filhote)\n- roupinhas \n- cobertas \n- remédios dentro do prazo de validade" />

                <TextView
                    android:id="@+id/cupons_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:text="@string/label_cupons"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/text_green"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/cupons_recycler"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/event_description" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cupons_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/people_label"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cupons_label"
                    tools:itemCount="1"
                    tools:listitem="@layout/view_cupon_list_item" />

                <TextView
                    android:id="@+id/people_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/label_people"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    android:textColor="@color/text_green"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toTopOf="@id/people_recycler"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cupons_recycler" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/people_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="36dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/people_label"
                    tools:itemCount="3" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.4" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>